fleet/homol/n8n/deployment-homol.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n-main
  labels:
    app: n8n
    role: main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
      role: main
  template:
    metadata:
      labels:
        app: n8n
        role: main
    spec:
      containers:
        - name: n8n
          image: n8nio/n8n:1.123.6
          ports:
            - containerPort: 5678
