fleet/homol/n8n/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n-homol
  labels:
    app: n8n
    role: main
spec:
  type: ClusterIP
  selector:
    app: n8n
    role: main
  ports:
    - name: http
      port: 5678
      targetPort: 5678
