fleet/homol/n8n/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  namespace: n8n-homol
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        # Trocando para sslip.io
        - n8n-homol.129.213.28.76.sslip.io
      secretName: n8nhomol-tls-sslip.io  # Mudei o nome de novo para limpar o histórico
  rules:
    - host: n8n-homol.129.213.28.76.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 5678
